--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -4,7 +4,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #606c71; }
@@ -54,54 +54,104 @@ a {
       margin-left: 0; } }
 
 .page-header {
+  background-color: #F2826F;
+  background-image: -o-linear-gradient(135deg, #5F50E1 0%, #A367AD 46%, #F2826F 100%);
+  background-image: -webkit-linear-gradient(135deg, #5F50E1 0%, #A367AD 46%, #F2826F 100%);
+  background-image: linear-gradient(135deg, #5F50E1 0%, #A367AD 46%, #F2826F 100%);
   color: #fff;
+  margin-bottom: 180px;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+}
 
+.top-header{
+  background: rgba(0,0,0,0.10);
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+.top-header h1{
+  margin: 0 0 0 140px;
+  float: left;
+}
+
+.top-header h1 img{
+  vertical-align: middle;
+  padding: 15px 0px;
+}
+
+.install-plugin{
+  float: right;
+  margin: 13px 140px 13px 0;
+}
+
+.link-to-ui{
+  display: block;
+  margin: 0 auto -230px;
+  max-width: 100%;
+  width: 500px;
+}
 @media screen and (min-width: 64em) {
   .page-header {
-    padding: 5rem 6rem; } }
+    padding: 6rem 6rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .page-header {
-    padding: 3rem 4rem; } }
+    padding: 4rem 4rem; } }
 
 @media screen and (max-width: 42em) {
   .page-header {
-    padding: 2rem 1rem; } }
-
-.project-name {
-  margin-top: 0;
-  margin-bottom: 0.1rem; }
-
-@media screen and (min-width: 64em) {
-  .project-name {
-    font-size: 3.25rem; } }
-
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .project-name {
-    font-size: 2.25rem; } }
-
-@media screen and (max-width: 42em) {
-  .project-name {
-    font-size: 1.75rem; } }
+    padding: 11rem 1rem; }
+  .top-header{
+    text-align: center;
+    padding: 0 1em;
+  }
+  .top-header h1{
+    float: none;
+    margin: 0 auto;
+  }
+  .install-plugin {
+    float: none;
+  }
+}
 
 .project-tagline {
+  margin-top: 0;
+}
+
+@media screen and (min-width: 64em) {
+  .project-tagline {
+    font-size: 3.25rem;
+    line-height: 1.2; } }
+
+@media screen and (min-width: 42em) and (max-width: 64em) {
+  .project-tagline {
+    font-size: 2.25rem;
+    line-height: 1.2;
+    margin: 30px 0;
+  }
+}
+
+@media screen and (max-width: 42em) {
+  .project-tagline {
+    font-size: 1.75rem;
+    line-height: 1.2; } }
+
+.project-tagline2 {
   margin-bottom: 2rem;
   font-weight: normal;
   opacity: 0.7; }
 
 @media screen and (min-width: 64em) {
-  .project-tagline {
+  .project-tagline2 {
     font-size: 1.25rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
-  .project-tagline {
+  .project-tagline2 {
     font-size: 1.15rem; } }
 
 @media screen and (max-width: 42em) {
-  .project-tagline {
+  .project-tagline2 {
     font-size: 1rem; } }
 
 .main-content :first-child {
